--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@extractus/article-extractor": "^8.0.16",
     "he": "^1.2.0",
+    "lru-cache": "^11.0.2",
     "xml-js": "^1.6.11"
   }
 }
